carousel for mainPage ready. Fix chatUser textarea on mobile

--- a/src/css/chat.css
+++ b/src/css/chat.css
@@ -242,7 +242,7 @@
 
 .panel-body {
     overflow-y: scroll;
-    height: 78vh;
+    height: 74vh;
 }
 
 .panel-primary {
