--- a/src/css/chatAdditional.css
+++ b/src/css/chatAdditional.css
@@ -17,3 +17,6 @@ body {
         display: none !important;
     }
 }
+.userMainBody {
+    min-height: auto;
+}
